# dfalse

./: Makefile.in  README.md  configure  configure.ac  dfalse.c  libtool  makefile  test.df
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.3  traces.4
src/: Makefile.am  Makefile.in  main.c  test.df
src/syntax/: df.vim
src/vim/indent/: df.vim
src/vim/plugin/: df.vim
